# TSSA_Ana

./: .gitignore  README.md
Asymmetry_Ana/: Constants.h  (+17 more)
Asymmetry_Ana/Asymmetry/: AcceptanceCorrection.C  AcceptanceCorrection.h  AcceptanceCorrectionLinkDef.h  Asymmetry.C  Asymmetry.h  AsymmetryLinkDef.h  Makefile  Makefile.am  Polarization.C  Polarization.h  PolarizationLinkDef.h  README.txt  RelativeLuminosity.C  RelativeLuminosity.h  RelativeLuminosityLinkDef.h  calculateAsymmetry.csh  configure.ac
Asymmetry_Ana/Asymmetry/macros/: CompareFormulas_Systematics.C  asymmetry.C  asymmetryMinus.C  asymmetryPlus.C  asymmetry_nialewis.C  asymmetry_pA.C  compareFormulasSystematics.C  phiHistos_pA.C  processAsymmetry.C  processAsymmetryMinus.C  processAsymmetryPlus.C  processAsymmetry_pA.C
Asymmetry_Ana/Asymmetry/macros/backgroundCorrection/: backgroundCorrection.C  backgroundCorrectionSystematics.C  backgroundCorrectionSystematicsMinus.C  backgroundCorrectionSystematicsPlus.C  backgroundCorrectionSystematicsPlusMinus.C  correctBackgroundSystError_pA.C  finalPlots_combined_pA.C  finalPlots_pA.C  finalPlots_panels_pA.C  finalPlots_ppCompare.C
Asymmetry_Ana/Asymmetry/macros/bunchShuffling/: asymmetryBunchShuffle.C  asymmetryBunchShuffleMinus.C  asymmetryBunchShufflePlus.C  asymmetryBunchShuffle_pA.C  bunchShuffling.csh  bunchShuffling.job  bunchShufflingSystematics_pA.C  plotBunchShuffling.C  plotBunchShuffling_local.C  plotBunchShuffling_local_minus.C  plotBunchShuffling_local_plus.C  plotBunchShuffling_pA.C
Asymmetry_Ana/Asymmetry/macros/dataFiles/: README.txt
(+196 files in other folders)
